fix: macOS background running (#633)