@@ -134,6 +134,7 @@ application {
         args.add("--add-opens java.desktop/java.awt=ALL-UNNAMED")
         args.add("--add-opens java.desktop/sun.lwawt=ALL-UNNAMED")
         args.add("--add-opens java.desktop/sun.lwawt.macosx=ALL-UNNAMED")
+        args.add("--add-exports java.desktop/com.apple.eawt=ALL-UNNAMED")
         args.add("-Dsun.java2d.metal=true")
         args.add("-Dapple.awt.application.appearance=system")
     }
@@ -388,6 +389,7 @@ tasks.register<Exec>("jpackage") {
         options.add("--add-opens java.desktop/sun.lwawt.macosx=ALL-UNNAMED")
         options.add("-Dapple.awt.application.appearance=system")
         options.add("--add-opens java.desktop/sun.lwawt.macosx.concurrent=ALL-UNNAMED")
+        options.add("--add-exports java.desktop/com.apple.eawt=ALL-UNNAMED")
     }
 
     if (os.isLinux) {
